--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!--
+  <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -10,9 +11,9 @@
   </head>
   <body>
     <button onclick="timedText()">Try it</button>
-    <!-- <button onclick="notify()">Try it</button> -->
-
     <p id="demo">Click on "Try it". I will display when two, four, and six seconds have passed.</p>
-
   </body>
 </html>
+-->
+
+<script src="script.js"></script>
