--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
-<!--
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>browser notification example</title>
+    <title>oculi</title>
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script>-->
   </head>
-  <body>
-    <button onclick="timedText()">Try it</button>
-    <p id="demo">Click on "Try it". I will display when two, four, and six seconds have passed.</p>
+  <body style="background-color:#d5f6ff">
+    <!--  colors: #d5f6ff, navy  -->
+    <h1 style="font-family:serif" fac style="color:navy">oculi</h1>
+    <div  >
+          <img src="nazar4_96.svg"  alt="uculi">
+
+    </div>
+
   </body>
 </html>
--->
-
 <script src="s1.js"></script>
